WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19739
REGRESSION: fast/js/property-getters-and-setters.html fails
https://bugs.webkit.org/show_bug.cgi?id=19739
Summary
REGRESSION: fast/js/property-getters-and-setters.html fails
Cameron Zwarich (cpst)
Reported
2008-06-24 00:44:44 PDT
The layout test fast/js/property-getters-and-setters.html now fails. All tests were passing for me with
r34751
, so I suspect that
r34754
is to blame. I'll go from
r34753
to
r34754
soon to double check, but going back and forth requires rebuilding the entire world due to the scope of the changes.
Attachments
patch
(1.93 KB, patch)
2008-06-24 08:43 PDT
,
Darin Adler
zwarich
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2008-06-24 08:29:17 PDT
That's strange. I had run all the regression tests with my changes. Maybe I made a tweak after the fact that broke this. I'll look at this ASAP.
Darin Adler
Comment 2
2008-06-24 08:43:58 PDT
Created
attachment 21905
[details]
patch
Darin Adler
Comment 3
2008-06-24 08:44:14 PDT
Sorry, it *was* something I tweaked after running all the tests.
Cameron Zwarich (cpst)
Comment 4
2008-06-24 10:50:47 PDT
Comment on
attachment 21905
[details]
patch r=me
Darin Adler
Comment 5
2008-06-24 13:00:59 PDT
Committed revision 34773.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug