2008-06-24  Darin Adler  <darin@apple.com>

Reviewed by Cameron.

        - fix https://bugs.webkit.org/show_bug.cgi?id=19739
          REGRESSION: fast/js/property-getters-and-setters.html fails

        * kjs/JSObject.cpp:
        (KJS::JSObject::put): Remove an untested optimization I checked in by accident.
        The two loops up the prototype chain both need to start from this; instead the
        second loop was starting where the first loop left off.



Canonical link: https://commits.webkit.org/27221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34773 268f45cc-cd09-0410-ab3c-d52691b4dbfc